--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,7 @@
     flex-direction: row;
     background: #1F2937;
     height: 25px;
+   
     
   }
 
@@ -51,6 +52,7 @@
 
   .main {
     background: #1F2937;   
+    margin: 100px;
   }
 
   .button {
