--- a/css/styles.css
+++ b/css/styles.css
@@ -1,105 +1,81 @@
- /* this selector dictates the style of the whole page */
- * {
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-
+@font-face {
+  font-family: Hero;
+  src: url(./fonts/Hero.otf);
 }
 
-  /* this selector selects all objects that have .flex-container class */
-  .flex-container {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-  }
+
+/* this selector dictates the style of the whole page */
+ * {
+    margin: auto;
+    font-family: Hero;
+
+ 
+}
+
+.flex-container {
+  display: flex;
+}
+
+/* this selector selects all divs inside of .flex-container */
+.flex-container div {
+  flex: 1;
+}
+
+.first {
+  color: #F9FAF8;
+  background: #1F2937;
+  height: 350px;
   
-  /* this selector selects all divs inside of .flex-container */
-  .flex-container div {
-    flex: 1;
-    margin: 30px;
-  }
+}
 
-  .first {
-    color: #F9FAF8;
-    background: #1F2937;
-    width: 92.8%;
-    height: 350px;
-    padding-left: 120px;
-  }
+h1 {
+  font-size: 48px;
+  color: #F9FAF8;
+  margin-left: 25px;
+  width: auto;
+}
 
-  .header {
-    flex-direction: row;
-    background: #1F2937;
-    height: 25px;
-    font-size: 24px;
-    
-   
-    
-  }
-  .title {
-    font-size: 48px;
-    font-style: bold;
-    margin-bottom: auto;
-  }
+.links {
+  font-size: 18px;
+  color: #E5E7EB;
+  width: 30px;
+}
 
-  .logo {
-    width: 220px;
-    background: #1F2937;
-    float: left;
-    height: 20px;
-    padding-left: 30px;
-    padding-top: 15px;
+.logo {
+  font-size: 24px;
+  color: #F9FAF8;
+  margin-left: 25px;
+}
 
-  }
+.head {
+  margin-bottom: 30px;
+}
 
-  .links {
-    width: 130px;
-    background: #1F2937;
-    float: right;
-    height: 20px;
-    font-size: 18px;
-    color: #E5E7EB;
-    padding-top: 15px;
-    padding-right: 110px;
-    
-  }
+.text-main {
+  font-size: 18px;
+  color: #E5E7EB;
+  margin-left: 25px;
+  width: auto;
+}
 
-  .main {
-    background: #1F2937;   
-    margin-left: 30px;
-    margin-top: 50px;
-    margin-bottom: 20px;
-    width: 375px;
-    margin-bottom: 10px;
-
-  }
+.button {
+  background: #3882F6;
+  color: white;
+  width: 120px;
+  height: 30px;
+  text-align: center;
+  padding-top: 10px;
+  border-radius: 5px;
+  margin-left: 25px;
+  margin-top: 5px;
+  
+}
 
 
+.placeholder {
+  background: lightgray;
+  text-align: center;
+  height: 110px;
+  padding-top: 105px;
 
-  .button {
-    background: #3882F6;
-    border-color: white;
-    color: white;
-    width: 120px;
-    height: 30px;
-    text-align: center;
-    padding-top: 10px;
-    border-radius: 5px;
-    margin-left: 30px;
-    
-  }
-
-  .second {
-    height: 350px;
-    width: 100%;
-  }
-
-  .third {
-    background-color: #E5E7EB;
-    height: 350px;
-    width: 100%;
-  }
-
-  .fourth {
-    height: 350px;
-    width: 100%;
-  }
+}
