added space between text and content in second div

--- a/css/styles.css
+++ b/css/styles.css
@@ -109,6 +109,8 @@ footer {
   padding-top: 29px;
   font-size: 28px;
   font-style: bold;
+  margin-top: 40px;
+  margin-bottom: 20px;
 }
 
 .square {
