--- a/css/styles.css
+++ b/css/styles.css
@@ -148,7 +148,6 @@ h1 {
 
 .flex-container-fourth {
   display: flex;
-  border: solid red 2px;
   background: #3882F6;
   margin-left: 20px;
   margin-right: 20px;
@@ -162,11 +161,36 @@ h1 {
 }
 
 .fourth-text {
-  margin-top: 30px;
+  margin-top: 45px;
   margin-bottom: 30px;
-  margin-left: 40px;
+  margin-left: 90px;
   margin-right: 80px;
+  color: white;
 }
+
+.call {
+  font-weight: 900;
+  font-size: 20px;
+}
+
+.call-description {
+   font-weight: 100;
+   font-size: 15px;
+   color: #E5E7EB;
+}
+
+.fourth-button {
+  border: solid;
+  border-radius: 5px;
+  border-color: white;
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-radius: 5px;
+  margin-top: 40px; 
+  width: 30px;
+}
+
 footer {
   background: #1F2937;
   font-size: 18px;
